# truthordare-api

./: .envrc  .gitignore  Dockerfile  Jenkinsfile  README.md  docker-compose.yml  docker-entrypoint.sh  example.env  pyproject.toml
backend/: alembic.ini
backend/alembic/: env.py
backend/alembic/versions/: 2784a088e140_add_truth.py  86382d72e645_add_dare.py  d5411bf13a2f_add_category.py
backend/src/: main.py
backend/src/core/: admin.py  config.py  logging_setup.py
backend/src/core/category/: admin.py  orm.py
backend/src/core/http/: client.py  dependencies.py
backend/src/core/language/: admin.py  orm.py
backend/src/dare/api/: admin.py  dependencies.py  rest.py
backend/src/dare/application/interfaces/: dare_repository.py  dare_uow.py
backend/src/dare/application/use_cases/: dislike_dare.py  get_dare.py  get_random_dare.py  like_dare.py
backend/src/dare/domain/: dtos.py  entities.py
backend/src/dare/infrastructure/db/: dare_repository.py  orm.py  unit_of_work.py
backend/src/db/: base.py  dependencies.py  engine.py  exceptions.py
backend/src/truth/api/: admin.py  dependencies.py  rest.py
backend/src/truth/application/interfaces/: truth_repository.py  truth_uow.py
backend/src/truth/application/use_cases/: dislike_truth.py  get_random_truth.py  get_truth.py  like_truth.py
backend/src/truth/domain/: dtos.py  entities.py
backend/src/truth/infrastructure/db/: orm.py  truth_repository.py  unit_of_work.py
backend/tests/: conftest.py  test_dare.py  test_truth.py
etc/postgresql/: postgresql.conf
